--- a/views/wasteshorturl.ejs
+++ b/views/wasteshorturl.ejs
@@ -34,7 +34,7 @@
         $(document).ready(function () {
             $("#preview").hide();
             $('#polo').on("click", function () {
-                var name = $(this).html();
+                let name = $(this).html();
                 console.log(name);
                 if (name === "see preview") {
                     $(this).html("hide preview");
