--- a/views/forgotpwd.ejs
+++ b/views/forgotpwd.ejs
@@ -27,7 +27,7 @@
     <script type="text/javascript">
         $(function() {
             $('.sendit').on('click', function() {
-                var email = $('#email').val();
+                let email = $('#email').val();
 
                 if (!isEmail(email)) {
                     // alert("please enter valid email");
@@ -41,15 +41,15 @@
                 }
 
                 function isEmail(email) {
-                    var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+                    let regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
                     return regex.test(email);
                 }
 
                 function sendit() {
-                    var obj = {
+                    let obj = {
 
                     };
-                    var email = $('#email').val();
+                    let email = $('#email').val();
                     obj.email = email;
                     console.log(obj);
 
