--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,12 +16,14 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="shortcut icon" href="./64.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="/userui/bootstrap/bootstrap.min.css">
 
     <link rel="stylesheet" href="/userui/css/main.css">
     <link rel="stylesheet" href="/userui/css/profile.css">
     <script src=" https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js">
     </script>
+    <link rel="stylesheet" href="/userui/bootstrap/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 
     <style>
         @import url(" https://use.typekit.net/foj0sle.css");
@@ -30,39 +32,41 @@
 
 </head>
 
-<body>
+<body >
 
-    <header class=" c-navbar">
-        <a class="c-navbar__brand" href="/dashboard">
-            <img src="/userui/biotree_logo.png" alt="Dashboard's Logo">
-        </a>
+ 
 
-        <!-- Navigation items that will be collapes and toggle in small viewports -->
-        <nav class="c-nav collapse" id="main-nav">
-            <ul class="c-nav__list">
-                <li class="c-nav__item">
-                    <!-- <a class="c-nav__link" href="#!">Analytics</a> -->
-                </li>
+    
+    <header class="navbar navbar-static-top" style="border-bottom: 2px solid #fff;">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/dashboard">
+                    <img src="/userui/biotree_logo.png" alt="Dashboard's Logo" style="height: 30px;">
+                </a>
+            </div>
 
-            </ul>
-        </nav>
-        <!-- // Navigation items  -->
-
-        <div class="c-dropdown u-ml-auto dropdown">
-            <a class="c-avatar c-avatar--xsmall has-dropdown dropdown-toggle" href="#" id="dropdwonMenuAvatar" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <!-- <img class="c-avatar__img" src="img/avatar-72.jpg" alt="User's Profile Picture"> -->
-                <i class="fa fa-user" aria-hidden="true" style="font-size:25px;color:grey"></i>
-
-            </a>
-
-            <div class="c-dropdown__menu dropdown-menu dropdown-menu-right" aria-labelledby="dropdwonMenuAvatar">
-                <a class="c-dropdown__item dropdown-item" href="/logout" onclick="signOut();">Sign out</a>
-
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-user" aria-hidden="true" style="font-size:25px;color:grey"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/profile">Profile</a></li>
+                            <li><a href="/logout" onclick="signOut();">Sign out</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
-
-        <!-- // .c-nav-toggle -->
     </header>
+    
 
 
 
@@ -70,10 +74,10 @@
 
 
 
+
     <!-- ########################################################################################################## -->
 
-    <div class="container">
-        <div class="g-signin2" data-onsuccess="onSignIn" style="width: 1px;opacity: 0;"> </div>
+    <div class="container" >
 
         <div class="row">
             <div class="col-md-2"></div>
