--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,12 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <title>Test | biotree</title>
+    <meta name="description" content="Login with VideoForm" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <link rel="icon" href="/userui/assets/biotree.png" type="image/png">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- endbuild -->
 
+</head>
+<body>
 
-
-<html>
-    <head>
-        <title>Test</title>
-    </head>
-    <body>
-        <h1>Test</h1>
-        <p>Test page</p>
-    </body>
+<h1>Test</h1>
+</body>
 </html>
