--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -81,42 +81,35 @@
 </head>
 
 <body>
-
-    <header class="c-navbar">
-        <a class="c-navbar__brand" href="/dashboard">
-            <img src="/userui/biotree_logo.png" alt="Dashboard's Logo">
-        </a>
-        <!-- Navigation items that will be collapes and toggle in small viewports -->
-
-
-
-
-        <div class="c-dropdown u-ml-auto dropdown">
-            <a class="c-avatar c-avatar--xsmall has-dropdown dropdown-toggle" href="#" id="dropdwonMenuAvatar" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <!-- <img class="c-avatar__img" src="./64.png" alt="User's Profile Picture"> -->
-                <i class="fa fa-solid fa-user" aria-hidden="true" style="font-size:25px;color:grey"></i>
-            </a>
-            <div class="c-dropdown__menu dropdown-menu dropdown-menu-right" aria-labelledby="dropdwonMenuAvatar">
-                <a class="c-dropdown__item dropdown-item" href="/profile"> Profile</a>
-                <a class="c-dropdown__item dropdown-item" href="/logout" onclick="signOut();">Sign out</a>
-
-                <!-- <a class="c-dropdown__item dropdown-item" id="startTourBtn">
-					Take a tour again</i>
-				</a> -->
-                <!-- <a class="c-dropdown__item dropdown-item" href="#">Manage Roles</a> -->
-            </div>
-        </div>
-
-
-        <button class="c-nav-toggle" type="button" data-toggle="collapse" data-target="#main-nav">
-			<span class="c-nav-toggle__bar"></span>
-			<span class="c-nav-toggle__bar"></span>
-			<span class="c-nav-toggle__bar"></span>
-		</button>
-        <!-- // .c-nav-toggle -->
-    </header>
-    <div class="g-signin2" data-onsuccess="onSignIn" style="width: 1px;opacity: 0;"> </div>
-
+    <header class="navbar navbar-static-top" style="border-bottom: 2px solid #fff;background-color: #fff;">
+           <div class="container-fluid">
+               <div class="navbar-header">
+                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+                       <span class="sr-only">Toggle navigation</span>
+                       <span class="icon-bar"></span>
+                       <span class="icon-bar"></span>
+                       <span class="icon-bar"></span>
+                   </button>
+                   <a class="navbar-brand" href="/dashboard">
+                       <img src="/userui/biotree_logo.png" alt="Dashboard's Logo" style="height: 30px;">
+                   </a>
+               </div>
+   
+               <div class="collapse navbar-collapse" id="navbar-collapse">
+                   <ul class="nav navbar-nav navbar-right">
+                       <li class="dropdown">
+                           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                               <i class="fa fa-user" aria-hidden="true" style="font-size:25px;color:grey"></i>
+                           </a>
+                           <ul class="dropdown-menu">
+                               <li><a href="/profile">Profile</a></li>
+                               <li><a href="/logout" onclick="signOut();">Sign out</a></li>
+                           </ul>
+                       </li>
+                   </ul>
+               </div>
+           </div>
+       </header>
 
 
 
@@ -511,10 +504,7 @@
                                                         
                                                     </button>
 
-                                                    <!-- <a class="a1" target="_blank" style="padding-bottom:2px;text-align: left;text-decoration: none" id="short">
-                                    
-                                </a> -->
-
+              
 
                                                     <% } else { %>
                                                         <button style="padding-bottom:2px;text-align: left;text-decoration: underline;	background: none;
@@ -1425,14 +1415,12 @@
 
 
 
-                // ////////////////////////////////////////////////
 
                 function urllink(shortcode) {
 
                     if (window.location.href.indexOf("localhost") > -1) {
 
-                        // window.location.href = `http://localhost:5000/${shortcode}`;
-                        // alert(`http://localhost:5000/${shortcode}`)
+              
 
                         window.open(
                             `http://localhost:3000/link/${shortcode}`, "_blank");
