--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -31,37 +31,34 @@
 </head>
 
 <body>
+    <header class="navbar navbar-static-top" style="border-bottom: 2px solid #fff;background-color: #fff;">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/dashboard">
+                    <img src="/userui/biotree_logo.png" alt="Dashboard's Logo" style="height: 30px;">
+                </a>
+            </div>
 
-    <header class=" c-navbar">
-        <a class="c-navbar__brand" href="/dashboard">
-            <img src="/userui/biotree_logo.png" alt="Dashboard's Logo">
-        </a>
-
-        <!-- Navigation items that will be collapes and toggle in small viewports -->
-        <nav class="c-nav collapse" id="main-nav">
-            <ul class="c-nav__list">
-                <li class="c-nav__item">
-                    <!-- <a class="c-nav__link" href="#!">Analytics</a> -->
-                </li>
-
-            </ul>
-        </nav>
-        <!-- // Navigation items  -->
-
-        <div class="c-dropdown u-ml-auto dropdown">
-            <a class="c-avatar c-avatar--xsmall has-dropdown dropdown-toggle" href="#" id="dropdwonMenuAvatar" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <!-- <img class="c-avatar__img" src="img/avatar-72.jpg" alt="User's Profile Picture"> -->
-                <i class="fa fa-user" aria-hidden="true" style="font-size:25px;color:grey"></i>
-
-            </a>
-
-            <div class="c-dropdown__menu dropdown-menu dropdown-menu-right" aria-labelledby="dropdwonMenuAvatar">
-                <a class="c-dropdown__item dropdown-item" href="/logout" onclick="signOut();">Sign out</a>
-
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-user" aria-hidden="true" style="font-size:25px;color:grey"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/profile">Profile</a></li>
+                            <li><a href="/logout" onclick="signOut();">Sign out</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
-
-        <!-- // .c-nav-toggle -->
     </header>
 
 
@@ -256,24 +253,7 @@
                 <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-                <script>
-                    function onLoad() {
-                        gapi.load('auth2', function() {
-                            gapi.auth2.init();
-                        });
-                    }
-
-                    function signOut() {
-                        let auth2 = gapi.auth2.getAuthInstance();
-                        auth2.signOut().then(function() {});
-                        auth2.disconnect();
-                        window.location.href = "/login";
-                    }
-                </script>
-                <!-- <script src="/userui/js/profile.js"></script> -->
-                <!-- <script src="/userui/js/appnew.js"></script> -->
-                <!-- <script src="/userui/js/styles.js"></script> -->
-                <!-- <script src="/userui/js/json.js"></script> -->
+         
                 <script type="text/javascript">
                     $(function() {
 
